fixed incorrect bylaw count, squishing issue, redirect issue

--- a/static/CSS/base.css
+++ b/static/CSS/base.css
@@ -784,7 +784,7 @@ div {
         flex-direction: column;
     }
     .grid {
-        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+        grid-template-columns: repeat(auto-fit, minmax(306px, 1fr));
     }
     .confirmedcontrol {
         display: none;
